--- a/whiskey.ipynb
+++ b/whiskey.ipynb
@@ -2,47 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ErrorException",
-     "evalue": "Constraints of type MathOptInterface.ScalarQuadraticFunction{Float64}-in-MathOptInterface.LessThan{Float64} are not supported by the solver.\n\nIf you expected the solver to support your problem, you may have an error in your formulation. Otherwise, consider using a different solver.\n\nThe list of available solvers, along with the problem types they support, is available at https://jump.dev/JuMP.jl/stable/installation/#Supported-solvers.",
-     "output_type": "error",
-     "traceback": [
-      "Constraints of type MathOptInterface.ScalarQuadraticFunction{Float64}-in-MathOptInterface.LessThan{Float64} are not supported by the solver.\n",
-      "\n",
-      "If you expected the solver to support your problem, you may have an error in your formulation. Otherwise, consider using a different solver.\n",
-      "\n",
-      "The list of available solvers, along with the problem types they support, is available at https://jump.dev/JuMP.jl/stable/installation/#Supported-solvers.\n",
-      "\n",
-      "Stacktrace:\n",
-      "  [1] error(s::String)\n",
-      "    @ Base ./error.jl:35\n",
-      "  [2] _moi_add_constraint(model::MathOptInterface.Utilities.CachingOptimizer{MathOptInterface.Bridges.LazyBridgeOptimizer{HiGHS.Optimizer}, MathOptInterface.Utilities.UniversalFallback{MathOptInterface.Utilities.Model{Float64}}}, f::MathOptInterface.ScalarQuadraticFunction{Float64}, s::MathOptInterface.LessThan{Float64})\n",
-      "    @ JuMP ~/.julia/packages/JuMP/gVq7V/src/constraints.jl:599\n",
-      "  [3] add_constraint(model::Model, con::ScalarConstraint{QuadExpr, MathOptInterface.LessThan{Float64}}, name::String)\n",
-      "    @ JuMP ~/.julia/packages/JuMP/gVq7V/src/constraints.jl:625\n",
-      "  [4] macro expansion\n",
-      "    @ ~/.julia/packages/JuMP/gVq7V/src/macros.jl:820 [inlined]\n",
-      "  [5] (::var\"#181#182\")(i::Symbol)\n",
-      "    @ Main ~/.julia/packages/JuMP/gVq7V/src/Containers/macro.jl:304\n",
-      "  [6] #44\n",
-      "    @ ~/.julia/packages/JuMP/gVq7V/src/Containers/container.jl:105 [inlined]\n",
-      "  [7] iterate\n",
-      "    @ ./generator.jl:47 [inlined]\n",
-      "  [8] collect(itr::Base.Generator{JuMP.Containers.VectorizedProductIterator{Tuple{Vector{Symbol}}}, JuMP.Containers.var\"#44#45\"{var\"#181#182\"}})\n",
-      "    @ Base ./array.jl:787\n",
-      "  [9] map(f::Function, A::JuMP.Containers.VectorizedProductIterator{Tuple{Vector{Symbol}}})\n",
-      "    @ Base ./abstractarray.jl:2961\n",
-      " [10] container(f::Function, indices::JuMP.Containers.VectorizedProductIterator{Tuple{Vector{Symbol}}}, #unused#::Type{JuMP.Containers.DenseAxisArray})\n",
-      "    @ JuMP.Containers ~/.julia/packages/JuMP/gVq7V/src/Containers/container.jl:105\n",
-      " [11] container(f::Function, indices::JuMP.Containers.VectorizedProductIterator{Tuple{Vector{Symbol}}})\n",
-      "    @ JuMP.Containers ~/.julia/packages/JuMP/gVq7V/src/Containers/container.jl:66\n",
-      " [12] macro expansion\n",
-      "    @ ~/.julia/packages/JuMP/gVq7V/src/macros.jl:138 [inlined]\n",
-      " [13] top-level scope\n",
-      "    @ ~/Documents/Julia/whiskey.ipynb:25"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max 2.8 x[std,scot] + 1.7000000000000002 x[std,johnny] + 1.7999999999999998 x[cho,scot] + 0.7000000000000002 x[cho,johnny] - 0.20000000000000018 x[pri,scot] - 1.2999999999999998 x[pri,johnny] - money[scot] - money[johnny]\n",
+      "Subject to\n",
+      " PSInf : -0.6 x[std,scot] - 0.6 x[cho,scot] + 0.4 x[pri,scot] ≥ 0.0\n",
+      " PJInf : -0.15 x[std,johnny] - 0.15 x[cho,johnny] + 0.85 x[pri,johnny] ≥ 0.0\n",
+      " SCSup : 0.8 x[std,scot] - 0.2 x[cho,scot] - 0.2 x[pri,scot] ≤ 0.0\n",
+      " SJSup : 0.4 x[std,johnny] - 0.6 x[cho,johnny] - 0.6 x[pri,johnny] ≤ 0.0\n",
+      " prodcutInf[scot] : x[std,scot] + x[cho,scot] + x[pri,scot] - 1.25 money[scot] ≤ 1000.0\n",
+      " prodcutInf[johnny] : x[std,johnny] + x[cho,johnny] + x[pri,johnny] - 1.25 money[johnny] ≤ 600.0\n",
+      " WisConstraint[std] : x[std,scot] + x[std,johnny] ≤ 1200.0\n",
+      " WisConstraint[cho] : x[cho,scot] + x[cho,johnny] ≤ 2500.0\n",
+      " WisConstraint[pri] : x[pri,scot] + x[pri,johnny] ≤ 2000.0\n",
+      " x[std,scot] ≥ 0.0\n",
+      " x[cho,scot] ≥ 0.0\n",
+      " x[pri,scot] ≥ 0.0\n",
+      " x[std,johnny] ≥ 0.0\n",
+      " x[cho,johnny] ≥ 0.0\n",
+      " x[pri,johnny] ≥ 0.0\n",
+      " money[scot] ≥ 0.0\n",
+      " money[johnny] ≥ 0.0\n"
      ]
     }
    ],
@@ -60,25 +45,25 @@
     "demand=Dict(zip(blends,[1000,600]));\n",
     "wisPrice=Dict(zip(blends,[6.8,5.7]));\n",
     "\n",
+    "#variable for money spend on advertise and quantity used for each type\n",
     "@variable(wiskey,x[wistype,blends]>=0);\n",
-    "@variable(wiskey,y[wistype,blends]>=0);\n",
-    "@constraint(wiskey,yPSInf,y[:pri,:scot]>=0.6*sum(y[i,:scot] for i in wistype));\n",
-    "@constraint(wiskey,ySCSup,y[:std,:scot]<=0.2*sum(y[i,:scot] for i in wistype));\n",
-    "@constraint(wiskey,yPJInf,y[:pri,:johnny]>=0.15*sum(y[i,:johnny] for i in wistype));\n",
-    "@constraint(wiskey,ySJSup,y[:std,:johnny]<=0.6*sum(y[i,:johnny] for i in wistype));\n",
     "@variable(wiskey,money[blends]>=0);\n",
+    "\n",
+    "#Sup and Inf for specific type of liquor\n",
     "@constraint(wiskey,PSInf,x[:pri,:scot]>=0.6*sum(x[i,:scot] for i in wistype));\n",
     "@constraint(wiskey,SCSup,x[:std,:scot]<=0.2*sum(x[i,:scot] for i in wistype));\n",
     "@constraint(wiskey,PJInf,x[:pri,:johnny]>=0.15*sum(x[i,:johnny] for i in wistype));\n",
     "@constraint(wiskey,SJSup,x[:std,:johnny]<=0.6*sum(x[i,:johnny] for i in wistype));\n",
-    "@constraint(wiskey, wisConstraint[i in wistype], sum(x[i,j] for j in blends)+\n",
-    "sum(y[i,j]*1.25*money[j] for j in blends)<=wisAvilable[i]);\n",
-    "@constraint(wiskey,prodcutInf[j in blends],sum(x[i,j] for i in wistype)<=demand[j]);\n",
     "\n",
-    "@objective(wiskey,Max, sum(x[i,j] for i in wistype for j in blends)*wisPrice[j]\n",
-    "-sum(x[i,j] for i in wistype for j in blends)*wisCost[i]-sum(money[i] for i in blends)+\n",
-    "money[:scot]*1.25*wisPrice[:scot]+money[:johnny]*wisPrice[:johnny]*1.25-sum(money[i] for i in blends));\n",
+    "#selling constant with advertise\n",
+    "@constraint(wiskey,prodcutInf[j in blends],sum(x[i,j] for i in wistype)<=demand[j]+1.25*money[j]);\n",
     "\n",
+    "#avilable liquor\n",
+    "@constraint(wiskey, WisConstraint[i in wistype], sum(x[i,j] for j in blends)<=wisAvilable[i]);\n",
+    "\n",
+    "#Objetive with revenue-cost-money spend on advertise\n",
+    "@objective(wiskey,Max, sum(x[i,j] for i in wistype for j in blends)*wisPrice[j]-\n",
+    "sum(x[i,j] for i in wistype for j in blends)*wisCost[i]-sum(money[i] for i in blends));\n",
     "\n",
     "\n",
     "print(wiskey)\n"
@@ -86,42 +71,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solving LP without presolve or with basis\n",
+      "Presolving model\n",
+      "9 rows, 8 cols, 26 nonzeros\n",
+      "9 rows, 8 cols, 26 nonzeros\n",
+      "Presolve : Reductions: rows 9(-0); columns 8(-0); elements 26(-0)\n",
+      "Solving the presolved LP\n",
       "Using EKK dual simplex solver - serial\n",
       "  Iteration        Objective     Infeasibilities num(sum)\n",
-      "          0    -1.1624986839e+01 Ph1: 0(0); Du: 2(11.625) 0s\n",
-      "          0    -1.1625000000e+01 Ph1: 0(0); Du: 2(11.625) 0s\n",
-      "          0     1.4000000000e+03 Pr: 0(0); Du: 2(11.625) 0s\n",
-      "Using EKK primal simplex solver\n",
-      "  Iteration        Objective     Infeasibilities num(sum)\n",
-      "          0     1.4000005374e+03 Pr: 0(0); Du: 2(11.625) 0s\n",
-      "          0     1.4000000000e+03 Pr: 0(0); Du: 2(11.625) 0s\n",
-      "Model   status      : Unbounded\n",
-      "Objective value     :  1.4000000000e+03\n",
-      "HiGHS run time      :          0.01\n",
-      "objective_value(wiskey) = 6.5\n"
+      "          0    -1.1199987222e+01 Ph1: 7(10.8); Du: 4(11.2) 0s\n",
+      "          7    -1.6133333333e+03 Pr: 0(0) 0s\n",
+      "Solving the original LP from the solution after postsolve\n",
+      "Model   status      : Optimal\n",
+      "Simplex   iterations: 7\n",
+      "Objective value     :  1.6133333333e+03\n",
+      "HiGHS run time      :          0.00\n",
+      "objective_value(wiskey) = 1613.3333333333335\n",
+      "value.(x) = 2-dimensional DenseAxisArray{Float64,2,...} with index sets:\n",
+      "    Dimension 1, [:std, :cho, :pri]\n",
+      "    Dimension 2, [:scot, :johnny]\n",
+      "And data, a 3×2 Matrix{Float64}:\n",
+      " 199.99999999999997  1000.0\n",
+      " 200.00000000000006   416.66666666666674\n",
+      " 600.0                250.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6.5"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "optimize!(wiskey)\n",
-    "@show objective_value(wiskey)"
+    "@show objective_value(wiskey)\n",
+    "@show value.(x);"
    ]
   }
  ],
