--- a/whiskey.ipynb
+++ b/whiskey.ipynb
@@ -66,7 +66,7 @@
     "sum(x[i,j] for i in wistype for j in blends)*wisCost[i]-sum(money[i] for i in blends));\n",
     "\n",
     "\n",
-    "print(wiskey)\n"
+    "print(wiskey);\n"
    ]
   },
   {
