--- a/crud.ipynb
+++ b/crud.ipynb
@@ -86,7 +86,7 @@
     "@objective(crud,Min,sum(sent[i]*recy[i] for i in time));\n",
     "\n",
     "\n",
-    "print(crud);\n"
+    "print(crud)\n"
    ]
   },
   {
