--- a/salaries.ipynb
+++ b/salaries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,8 @@
       "HiGHS run time      :          0.00\n",
       "objective_value(picframe1) = 136500.0\n",
       "value(Customer) = 68500.0\n",
-      "value(IT) = 68000.0\n"
+      "value(IT) = 68000.0\n",
+      "value(nina) = 68000.0\n"
      ]
     },
     {
